--- a/index.html
+++ b/index.html
@@ -51,34 +51,45 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
             </div>
         </section>
-        <section class="section2"> <img src="images/2-liptin.png" class="col-md-4 col-md-offset-4 col-xs-12">
-            <div class="clearfix"></div>
+        <section class="section2"> 
+        	<img src="images/2-liptin.png" class="img img-responsive">
             <div class="container">
-                <p class="wow slideInDown" style="text-align:center;">Ketertarikan dan kebutuhan yang terus meningkat dalam hal kecantikan membuat profesi <i>beautypreneur</i> jadi sangat menjanjikan.</p> 
-                <div class="col-md-6 col-md-offset-3 col-xs-12 "><img src="images/2-grafis1.png" class="img img-responsive animated wow slideInRight"></div>
-                <br> <div class="col-md-6 col-md-offset-3 col-xs-12"><img src="images/2-grafis2.png" class="img img-responsive animated wow slideInLeft"></div> </div>
+                <p class="animated wow slideInDown" style="text-align:center;">Ketertarikan dan kebutuhan yang terus meningkat dalam hal kecantikan membuat profesi <i>beautypreneur</i> jadi sangat menjanjikan.</p> 
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <img src="images/2-grafis1.png" class="img img-responsive animated wow slideInRight">
+                    </div>
+                    <div class="col-lg-12 text-center">
+                        <img src="images/2-grafis2.png" class="img img-responsive animated wow slideInLeft">
+                    </div>
+                </div>
+             </div>
         </section>
         <section class="section3">
             <div class="section3-atas">
                 <div class="container">
-                    <div class="col-md-6 col-sm-12 col-xs-12 animated wow swing">
-                        <div class="img-testimoni"><img src="images/3-merrie.png" class="img img-responsive"></div>
-                        <div class="bg-testimoni">
-                            <p class="teks-pink"><strong>Prestasi:</strong>
-                                <br>Forbes 30 Under 30 Asia, kategori Retail & E-commerce</p>
-                            <p>Bersama rekannya, Ninda Ramandiani, Merrie mendirikan BloBar Salon pada 2014. Salon yang terletak di Kemang, Jakarta Selatan ini fokus pada jasa pengecatan rambut dan dikenal sebagai pionir pewarnaan rambut ombre di Indonesia.
-                                <br>
-                                <br>“Berawal dari proyek kampus, aku terpikir untuk membuat bisnis yang sesuai dengan minatku, yaitu kecantikan. Aku pilih rambut karena perawatan rambut akan selalu diminati. Dalam sehari BloBar bisa kedatangan 5-10 tamu dan dalam sebulan penghasilan bisa mencapai puluhan juta. BloBar berhasil balik modal dalam waktu sembilan bulan.”</p>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                    	<div class=" animated wow swing">
+                            <div class="img-testimoni"><img src="images/3-merrie.png" class="img img-responsive"></div>
+                            <div class="bg-testimoni">
+                                <p class="teks-pink"><strong>Prestasi:</strong>
+                                    <br>Forbes 30 Under 30 Asia, kategori Retail & E-commerce</p>
+                                <p>Bersama rekannya, Ninda Ramandiani, Merrie mendirikan BloBar Salon pada 2014. Salon yang terletak di Kemang, Jakarta Selatan ini fokus pada jasa pengecatan rambut dan dikenal sebagai pionir pewarnaan rambut ombre di Indonesia.
+                                    <br>
+                                    <br>“Berawal dari proyek kampus, aku terpikir untuk membuat bisnis yang sesuai dengan minatku, yaitu kecantikan. Aku pilih rambut karena perawatan rambut akan selalu diminati. Dalam sehari BloBar bisa kedatangan 5-10 tamu dan dalam sebulan penghasilan bisa mencapai puluhan juta. BloBar berhasil balik modal dalam waktu sembilan bulan.”</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-sm-12 col-xs-12 animated wow swing">
-                        <div class="img-testimoni"><img src="images/3-chrisanti.png" class="img img-responsive"></div>
-                        <div class="bg-testimoni">
-                            <p class="teks-pink"><strong>Prestasi:</strong>
-                                <br>Sociolla punya ±200 merek & ±7000 produk, usaha berkembang dengan menghadirkan <i>marketplace</i> (Beautylink) dan media (BeautyJournal)</p>
-                            <p>Bersama rekannya, Chrisanti meresmikan <i>e-commerce</i> Sociolla sejak Maret 2015. Ketika <i>launch,</i> Sociolla sudah memiliki sekitar 50 merek dan 1,500 produk <i>makeup</i> yang didapat langsung dari distributor resmi.
-                                <br>
-                                <br>“Ide untuk memulai Sociolla muncul karena aku mengalami kesulitan mencari produk <i>beauty</i> di Indonesia. Pilihan terbatas dan jarang bisa didapatkan secara <i>online</i> dari <i>website</i> yang terpercaya.”</p>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                    	<div class=" animated wow swing">
+                            <div class="img-testimoni"><img src="images/3-chrisanti.png" class="img img-responsive"></div>
+                            <div class="bg-testimoni">
+                                <p class="teks-pink"><strong>Prestasi:</strong>
+                                    <br>Sociolla punya ±200 merek & ±7000 produk, usaha berkembang dengan menghadirkan <i>marketplace</i> (Beautylink) dan media (BeautyJournal)</p>
+                                <p>Bersama rekannya, Chrisanti meresmikan <i>e-commerce</i> Sociolla sejak Maret 2015. Ketika <i>launch,</i> Sociolla sudah memiliki sekitar 50 merek dan 1,500 produk <i>makeup</i> yang didapat langsung dari distributor resmi.
+                                    <br>
+                                    <br>“Ide untuk memulai Sociolla muncul karena aku mengalami kesulitan mencari produk <i>beauty</i> di Indonesia. Pilihan terbatas dan jarang bisa didapatkan secara <i>online</i> dari <i>website</i> yang terpercaya.”</p>
+                            </div>
                         </div>
                     </div>
                     <div class="clearfix"></div>
@@ -87,24 +98,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="clearfix"></div>
             <div class="section3-bawah">
                 <div class="container">
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 animated wow swing">
-                        <div class="img-testimoni"><img src="images/3-diva.png" class="img img-responsive"></div>
-                        <div class="bg-testimoni">
-                            <p class="teks-pink"><strong>Prestasi:</strong>
-                                <br>Omzet hingga 10 juta dan memproduksi <i>skincare</i> lebih dari 50 unit per bulan.</p>
-                            <p>Divanda memulai bisnis <i>skincare</i> organik sejak awal 2017. Memproduksi <i>masker clay</i>, <i>face mist</i> dan <i>face oil.</i>
-                                <br>
-                                <br>“Orang-orang lagi beralih ke <i>skincare</i> yang natural dan organik. Meski KleiandClay termasuk baru, aku pengin dikenal sebagai <i>brand</i> yang memang menjadi solusi untuk masalah kulit.”</p>
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    	<div class=" animated wow swing">
+                            <div class="img-testimoni"><img src="images/3-diva.png" class="img img-responsive"></div>
+                            <div class="bg-testimoni">
+                                <p class="teks-pink"><strong>Prestasi:</strong>
+                                    <br>Omzet hingga 10 juta dan memproduksi <i>skincare</i> lebih dari 50 unit per bulan.</p>
+                                <p>Divanda memulai bisnis <i>skincare</i> organik sejak awal 2017. Memproduksi <i>masker clay</i>, <i>face mist</i> dan <i>face oil.</i>
+                                    <br>
+                                    <br>“Orang-orang lagi beralih ke <i>skincare</i> yang natural dan organik. Meski KleiandClay termasuk baru, aku pengin dikenal sebagai <i>brand</i> yang memang menjadi solusi untuk masalah kulit.”</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 animated wow swing">
-                        <div class="img-testimoni"><img src="images/3-archa.png" class="img img-responsive"></div>
-                        <div class="bg-testimoni">
-                            <p class="teks-pink"><strong>Prestasi:</strong>
-                                <br>Best Makeup Looks di Critics Choice Awards 2016 oleh Hollywoodlife.com, MUA di America’s Next Top Model dan majalah Vogue.</p>
-                            <p>Chelsea menjadi MUA sejak tahun 2009. Pernah menjadi MUA seleb Hollywood, dan sekarang masih aktif sebagai MUA serta melakukan <i>workshop class</i> tentang <i>makeup.</i>
-                                <br>
-                                <br>“Sewaktu kuliah di Amerika, aku mengisi waktu senggang dengan menjadi MUA. Aku pernah merias Chriselle Lim, Karmin, Olga Fonda, Jordan Fisher, dan banyak lagi. Aku balik lagi ke Jakarta karena pengin berbagi ilmu untuk teman-teman yang mau menjadi MUA.”</p>
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    	<div class=" animated wow swing">
+                            <div class="img-testimoni"><img src="images/3-archa.png" class="img img-responsive"></div>
+                            <div class="bg-testimoni">
+                                <p class="teks-pink"><strong>Prestasi:</strong>
+                                    <br>Best Makeup Looks di Critics Choice Awards 2016 oleh Hollywoodlife.com, MUA di America’s Next Top Model dan majalah Vogue.</p>
+                                <p>Chelsea menjadi MUA sejak tahun 2009. Pernah menjadi MUA seleb Hollywood, dan sekarang masih aktif sebagai MUA serta melakukan <i>workshop class</i> tentang <i>makeup.</i>
+                                    <br>
+                                    <br>“Sewaktu kuliah di Amerika, aku mengisi waktu senggang dengan menjadi MUA. Aku pernah merias Chriselle Lim, Karmin, Olga Fonda, Jordan Fisher, dan banyak lagi. Aku balik lagi ke Jakarta karena pengin berbagi ilmu untuk teman-teman yang mau menjadi MUA.”</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -162,7 +177,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </section>
         <section class="section6"> 
         	<div  class="col-xs-8 col-xs-offset-2">
-        	<img src="images/6-splash.png" class="img img-responsive">
+        	<img src="images/6-splash.png" class="img img-responsive" style="display:block;">
             </div>
             <div class="container"> <img src="images/6-judul.png"  style="padding:20px 0;" class="img img-responsive animated wow slideInDown">
                 <div class="clearfix"></div>
@@ -222,26 +237,34 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </section>
         <section class="section8"> 
         	<div class="col-xs-12">
-            	<img src="images/8-jeruk.png" class="img img-responsive">
+            	<img src="images/8-jeruk.png" class="img img-responsive" style="display:block;">
             </div>
             <div class="container">
-                <div> <img src="images/8-judul.png" class="img img-responsive animated wow zoomIn">
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> <img src="images/8-info1.png" class="img img-responsive animated wow slideInLeft"> </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> <img src="images/8-info2.png" class="img img-responsive animated wow slideInRight"> </div>
-                    <div class="clearfix"></div>
+                <div class="row" style="padding-bottom:20px;"> 
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                        <img src="images/8-judul.png" class="img img-responsive animated wow zoomIn">
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-center"> 
+                        <img src="images/8-info1.png" class="img img-responsive animated wow slideInLeft">
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-center"> 
+                        <img src="images/8-info2.png" class="img img-responsive animated wow slideInRight">
+                    </div>
                 </div>
                 <div class="row" style="padding-bottom:50px;"> 
-                	<img src="images/8-pertanyaan.png" class="img img-responsive  animated wow slideInDown">
-                    <div class="col-md-3">
+            		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                		<img src="images/8-pertanyaan.png" class="img img-responsive  animated wow slideInDown">
+                    </div>
+                    <div class="col-md-3 text-center">
                         <a data-toggle="modal" data-target="#myquotes1"><img src="images/8-satu.png" class="img img-responsive animated wow flipInX"></a>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 text-center">
                         <a data-toggle="modal" data-target="#myquotes2"><img src="images/8-dua.png" class="img img-responsive animated wow flipInX"></a>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 text-center">
                         <a data-toggle="modal" data-target="#myquotes3"><img src="images/8-tiga.png" class="img img-responsive animated wow flipInX"></a>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 text-center">
                         <a data-toggle="modal" data-target="#myquotes4"><img src="images/8-empat.png" class="img img-responsive animated wow flipInX"></a>
                     </div>
                 </div>
