--- a/index.bak.html
+++ b/index.bak.html
@@ -57,10 +57,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <p class="animated wow slideInDown" style="text-align:center;">Ketertarikan dan kebutuhan yang terus meningkat dalam hal kecantikan membuat profesi <i>beautypreneur</i> jadi sangat menjanjikan.</p> 
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <img src="images/2-grafis1.png" class="img img-responsive animated wow bounceInUp">
+                        <img src="images/2-grafis1.png" class="img img-responsive animated wow slideInRight">
                     </div>
                     <div class="col-lg-12 text-center">
-                        <img src="images/2-grafis2.png" class="img img-responsive animated wow bounceInUp">
+                        <img src="images/2-grafis2.png" class="img img-responsive animated wow slideInLeft">
                     </div>
                 </div>
              </div>
@@ -131,10 +131,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
             <div class="container">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> 
-                	<img src="images/4-cewek.png" class="img img-responsive animated flipInX wow "> 
+                	<img src="images/4-cewek.png" class="img img-responsive animated slideInLeft wow "> 
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <p class=" animated flipInX wow "><i>Beautypreneur</i> berasal dari kata <i>beauty entrepreneur</i>. Menurut businessdictionary.com, <i>entrepreneur</i> adalah seseorang yang memproduksi barang atau servis yang mendapatkan keuntungan. Sehingga, <i>Beautypreneur</i> adalah seseorang yang memproduksi barang atau servis di bidang kecantikan.
+                    <p class=" animated slideInRight wow "><i>Beautypreneur</i> berasal dari kata <i>beauty entrepreneur</i>. Menurut businessdictionary.com, <i>entrepreneur</i> adalah seseorang yang memproduksi barang atau servis yang mendapatkan keuntungan. Sehingga, <i>Beautypreneur</i> adalah seseorang yang memproduksi barang atau servis di bidang kecantikan.
                         <br>
                         <br> Sejak beberapa tahun terakhir, industri kecantikan dalam negeri berkembang pesat. Tiap tahun semakin banyak produk kosmetik dan <i>skincare</i> lokal yang dijual di pasaran. </p>
                 </div>
@@ -144,18 +144,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="section5-atas">
                 <div class="container">
                     <div class="atas">
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"><img src="images/5-grafis1.png" class="img img-responsive animated wow bounceInUp"></div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"><img src="images/5-grafis2.png" class="img img-responsive animated wow bounceInUp"></div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"><img src="images/5-grafis1.png" class="img img-responsive animated wow bounceInRight"></div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"><img src="images/5-grafis2.png" class="img img-responsive animated wow bounceInLeft"></div>
                     </div>
                     <div class="bawah">
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"><img src="images/5-grafis3.png" class="img img-responsive animated wow bounceInUp"></div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"><img src="images/5-grafis4.png" class="img img-responsive animated wow bounceInUp"></div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"><img src="images/5-grafis3.png" class="img img-responsive animated wow bounceInLeft"></div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"><img src="images/5-grafis4.png" class="img img-responsive animated wow bounceInRight"></div>
                     </div> 
                     <div class="col-md-12">
                     	<img src="images/5-judulinfo.png" class="img img-responsive animated wow slideInDown">
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> <img src="images/5-info1.png" class="img img-responsive animated wow flipInX"> </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> <img src="images/5-info2.png" class="img img-responsive animated wow flipInX"> </div>
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> <img src="images/5-info1.png" class="img img-responsive animated wow slideInLeft"> </div>
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> <img src="images/5-info2.png" class="img img-responsive animated wow slideInRight"> </div>
                 </div>
             </div>
             <div class="section5-bawah">
@@ -193,13 +193,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="section7-atas">
                 <div class="container">
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                        <div class="img-testimonikuning"><img src="images/7-alnur.png" class="img img-responsive animated wow bounceInUp"></div>
+                        <div class="img-testimonikuning"><img src="images/7-alnur.png" class="img img-responsive animated wow slideInLeft"></div>
                         <div class="bg-testimonikuning">
                             <p>“Dulu sempat kepikiran pengin punya salon atau spa tapi bingung gimana cara mulainya. Aku juga masih ragu apakah bisa mengelolanya dengan baik.”</p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                        <div class="img-testimonikuning"><img src="images/7-nabila.png" class="img img-responsive animated wow bounceInUp"></div>
+                        <div class="img-testimonikuning"><img src="images/7-nabila.png" class="img img-responsive animated wow slideInRight"></div>
                         <div class="bg-testimonikuning">
                             <p>“Pertama aku bingung mau mulai dari mana. Lalu, aku juga memikirkan modal usahanya, pasti kan butuh uang yang enggak sedikit.”</p>
                         </div>
@@ -214,22 +214,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="container">
                     <div class="langkah-preneur">
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="margin-top:25%;"> <img src="images/7-mua1.png" class="img img-responsive animated wow flipInX"> </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> <img src="images/7-mua2.png" class="img img-responsive animated wow bounceInUp"> </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> <img src="images/7-mua2.png" class="img img-responsive animated wow slideInRight"> </div>
                         <div class="clearfix"></div>
                     </div>
                     <div class="langkah-preneur">
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="margin-top:25%;"> <img src="images/7-makeup1.png" class="img img-responsive animated wow flipInX"> </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> <img src="images/7-makeup2.png" class="img img-responsive animated wow bounceInUp"> </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> <img src="images/7-makeup2.png" class="img img-responsive animated wow slideInRight"> </div>
                         <div class="clearfix"></div>
                     </div>
                     <div class="langkah-preneur">
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="margin-top:25%;"> <img src="images/7-skincare1.png" class="img img-responsive animated wow flipInX"> </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> <img src="images/7-skincare2.png" class="img img-responsive animated wow bounceInUp"> </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> <img src="images/7-skincare2.png" class="img img-responsive animated wow slideInRight"> </div>
                         <div class="clearfix"></div>
                     </div>
                     <div class="langkah-preneur" style="border:none;">
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="margin-top:25%;"> <img src="images/7-hairsalon1.png" class="img img-responsive animated wow flipInX"> </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> <img src="images/7-hairsalon2.png" class="img img-responsive animated wow bounceInUp"> </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> <img src="images/7-hairsalon2.png" class="img img-responsive animated wow slideInRight"> </div>
                         <div class="clearfix"></div>
                     </div>
                 </div>
@@ -245,10 +245,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <img src="images/8-judul.png" class="img img-responsive animated wow zoomIn">
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-center"> 
-                        <img src="images/8-info1.png" class="img img-responsive animated wow bounceInUp">
+                        <img src="images/8-info1.png" class="img img-responsive animated wow slideInLeft">
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-center"> 
-                        <img src="images/8-info2.png" class="img img-responsive animated wow bounceInUp">
+                        <img src="images/8-info2.png" class="img img-responsive animated wow slideInRight">
                     </div>
                 </div>
                 <div class="row" style="padding-bottom:50px;"> 
@@ -319,7 +319,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <script type="text/javascript">
         new WOW().init();
     </script>
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-589427f590d29ffc"></script>
-
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-595ea99129b2224e"></script> 
 </body>
 </html>
